[package]
name = "lianad"
version = "13.0.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/wizardsardine/liana"
license-file = "../LICENCE"
keywords = ["bitcoin", "wallet", "miniscript", "inheritance", "recovery"]
description = "Liana wallet daemon"
exclude = [".github/", ".cirrus.yml", "tests/",  "test_data/", "contrib/", "pyproject.toml"]

[[bin]]
name = "lianad"
path = "src/bin/daemon.rs"

[[bin]]
name = "liana-cli"
path = "src/bin/cli.rs"

[features]
nonblocking_shutdown = []

[dependencies]
liana = { path = "../liana" }
# For managing transactions (it re-exports the bitcoin crate)
miniscript = { workspace = true, features = ["serde", "compiler", "base64"] }

# For Electrum backend.
bdk_electrum = { workspace = true, default-features = false, features = [ "use-rustls-ring" ] }

# Don't reinvent the wheel
dirs = { workspace = true }

# We use TOML for the config, and JSON for RPC
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }

# Logging stuff
log = { workspace = true }
fern = { workspace = true }

# In order to have a backtrace on panic, because the
# stdlib does not have a programmatic interface yet
# to work with our custom panic hook.
backtrace = { workspace = true }

rusqlite = { workspace = true, features = ["bundled", "unlock_notify"] }

# To talk to bitcoind
jsonrpc = { workspace = true, features = ["minreq_http"], default-features = false }

# import/export labels
bip329 = { workspace = true, default-features = false }
