[package]
name = "liana_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", default_features = false, features = ["svg", "image", "glow"] }
iced_native = "0.8"
iced_lazy = { version = "0.4"}
bitcoin = "0.29"
chrono = "0.4"
