[package]
name = "business-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "business_installer"
path = "src/lib.rs"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
email_address = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
tokio = { workspace = true, features = ["rt"] }
iced = { workspace = true, default-features = false, features = ["tokio", "svg", "image", "wgpu", "tiny-skia"] }
liana = { path = "../../liana" }
liana-connect = { path = "../../liana-connect" }
liana-gui = { path = "../../liana-gui" }
liana-ui = { path = "../../liana-ui" }
miniscript = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
url = { workspace = true }
rustls = { workspace = true }
chrono = { workspace = true }
async-hwi = { workspace = true, features = ["service", "ledger", "jade", "coldcard", "bitbox", "specter"] }
tracing = { workspace = true }
log = { workspace = true }
rfd = { workspace = true }
futures = "0.3"
futures-timer = "3.0"

